# reymen-agean

./: .cov_report.json  .coverage  .coveragerc  .editorconfig  .env.example  .env.example.deepseek  .gitattributes  .gitignore  .pre-commit-config.yaml  .test_browser_izole.py  4_madde_duzeltme_raporu.txt  4_madde_plani_cozum_yollari.txt  A1-A6_DURUM_RAPORU.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOREV_4_5_OTOMASYON_TALIMATI.md  INCELEME_RAPORU.md  LICENSE  README.deepseek.md  README.md  REYMEN_VS_HERMES_KARSILASTIRMA.md  REYMEN_VS_HERMES_KARSILASTIRMA_DETAYLI.md  ReYMeN.bat  ReYMeN_bootstrap.py  ReYMeN_constants.py  ReYMeN_logging.py  ReYMeN_state.py  ReYMeN_time.py  ReYMeN_tools.py  SKILLS_KATALOG.md  SOUL.md  SUPPORT.md  TEST_DURUMU.md  _fast_scan.py  _self_improve_672.py  _test_fc.py  _test_reymen2.py  _test_reymen_import.py  (+263 more)
.ReYMeN/: 7_bulgu_kapatma_raporu.txt  SOUL.md  a2a_nodes.json  ai_bot_Kiral38bot.json  ai_bot_Pasa_38_bot.json  ai_bot_ReYMeN_ReYMeNbot.json  analitik.db  analitik.db-shm  analitik.db-wal  backup_state.json  bot_sync_prompt.py  claude_gorev_reymen_import.md  config.yaml  coverage_history.json  coverage_raporu.html  decisions.md  defter.txt  durum.json  durum.json.eski  durum.json.yedek  global_073825.txt  global_durum_duzeltilmis.txt  gorev_3_eksik_ozellik.md  gorev_7_dusuk_oncelik.md  gorev_cli_bolme_3_dosya.md  gorev_cli_bolme_main.md  gorev_cozucu_sistemi.md  gorev_docstring_turkce.md  gorev_gelistirme.md  gorev_hafiza_sistemi.md  gorev_hata_dongusu.md  gorev_hermes_ozellikleri.md  gorev_hermes_seviyesi.md  gorev_kalan_5_modul.md  gorev_kanban.md  gorev_son_iyilestirmeler.md  gorev_turkce_dokuman.md  gorev_turkce_md.md  gorev_webui.md  hata_cozumleri.md  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md
.playwright-mcp/: page-2026-06-29T21-46-43-915Z.yml
.venv_reymen/: pyvenv.cfg
__silinecek_eski/: improvements_arsiv_20260704.csv
acp/: __init__.py  exceptions.py  schema.py
acp_adapter/: __init__.py  agent.json  auth.py  client.py  edit_approval.py  entry.py  events.py  mesaj.py  permissions.py  provenance.py  server.py  session.py  tools.py
agent/: __init__.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  approval.py  approvals.py  auxiliary_client.py  background_review.py  bedrock_adapter.py  chat_completion_helpers.py  codex_runtime.py  context_files.py  context_references.py  conversation_compression.py  conversation_loop.py  copilot_acp_client.py  credential_pool.py  credential_sources.py  curator.py  curator_backup.py  display.py  error_classifier.py  file_safety.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  google_code_assist.py  google_oauth.py  home_assistant.py  image_gen_provider.py  memory_manager.py  message_sanitization.py  model_metadata.py  nous_rate_guard.py  (+15 more)
skills/user-preferences/hersona/: CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  LICENSE-CC0.txt  README.ja.md  README.md  ROADMAP.md  SKILL.md  pyproject.toml
skills/user-preferences/hersona/attributes/archetype/: childhood_friend.yaml  gamer_otaku.yaml  heroine.yaml  hikikomori.yaml  idol.yaml  mentor.yaml  rival.yaml  robot_android.yaml  shrine_maiden.yaml
skills/user-preferences/hersona/attributes/hobby/: cooking.yaml  gamer.yaml  music.yaml  reading.yaml  sports.yaml
skills/user-preferences/hersona/attributes/personality/: airhead.yaml  chuunibyou.yaml  dandere.yaml  genki.yaml  hot_blooded.yaml  intellectual.yaml  klutz.yaml  kuudere.yaml  mysterious.yaml  narcissist.yaml  optimist.yaml  pessimist.yaml  playful.yaml  pragmatist.yaml  protective.yaml  serious.yaml  stoic.yaml  switch.yaml  tsundere.yaml  yandere.yaml
skills/user-preferences/hersona/attributes/speech/: archaic.yaml  blunt.yaml  blunt_en.yaml  boku_girl.yaml  british_en.yaml  casual_en.yaml  formal_en.yaml  gyaru.yaml  kansai_ben.yaml  keigo.yaml  kyoto_ben.yaml  mischievous.yaml  mixed_dialect.yaml  onee_kotoba.yaml  ore_boy.yaml  princess_speech.yaml  seductive.yaml  soft.yaml  southern_us_en.yaml  stutter.yaml  theatrical.yaml  third_person.yaml  tomboy.yaml  washi.yaml  whispery.yaml
skills/user-preferences/hersona/attributes/visual/: animal_ears.yaml  glamorous.yaml  glasses.yaml  petite.yaml  silver_hair.yaml
skills/user-preferences/hersona/docs/: BATCH4_DECISIONS.md  DUET_PLAN.md  I18N_DESIGN.md  I18N_FUTURE_WORK.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENT_PLAN.md  PUBLIC_API.md  hermes-agent.md  index.html  preview.html
skills/user-preferences/hersona/docs/app/: app.js  index.html  style.css
skills/user-preferences/hersona/docs/duet/: PHASE0_HERSONA_PREP.md  PHASE1_HANDOFF.md  PHASE1_ORCHESTRATOR.md  PHASE2_DIRECTOR_AND_PARTICIPATION.md  PHASE3_WEB_UI.md  PHASE4_ECOSYSTEM.md  README.md
skills/user-preferences/hersona/docs/duet/mockup/: index.html
skills/user-preferences/hersona/hersona/: __init__.py
skills/user-preferences/hersona/hersona/cli/: __init__.py  __main__.py  app.py
skills/user-preferences/hersona/hersona/core/: __init__.py  attach.py  authoring.py  compatibility.py  constants.py  i18n.py  intensity.py  paths.py  recommend.py  sample_dialogue.py  weight.py
skills/user-preferences/hersona/hersona/locales/: en.yaml  ja.yaml
skills/user-preferences/hersona/schema/: attribute.schema.json
skills/user-preferences/hersona/scripts/: build_site.py  migrate_i18n.py  run_quiz.py  validate.py
skills/user-preferences/hersona/scripts/_oneoff/: add_en_content.py  gen_quiz_en.py  gen_v1_attributes.py
skills/user-preferences/hersona/site/: README.md  data.json  showcase.json
skills/user-preferences/hersona/skills/claude-hersona/: SKILL.md
skills/user-preferences/hersona/skills/grok-hersona/: SKILL.md
skills/user-preferences/hersona/skills/hersona-initializer/: SKILL.md
skills/user-preferences/hersona/skills/hersona-recommend-quiz/: SKILL.md
skills/user-preferences/hersona/tests/: conftest.py  test_attach.py  test_attributes.py  test_authoring.py  test_cli.py  test_compatibility.py  test_i18n.py  test_intensity.py  test_migrate_i18n.py  test_packaging.py  test_public_api.py  test_recommend.py  test_weight.py
(+19404 files in other folders)
