[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reymen-agent"
version = "1.0.1"
description = "ReYMeN — Türkçe otonom AI asistanı. Çoklu-provider LLM, araç çağrı motoru, kapalı öğrenme döngüsü."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ReYMeN Team" },
]
keywords = ["ai", "agent", "cli", "reymen", "turkce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Turkish",
]

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "httpx>=0.28.0",
    "rich>=14.0.0",
    "prompt_toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo_search>=8.0.0",
    "edge-tts>=6.0.0",
    "python-telegram-bot>=20.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
full = [
    "anthropic>=0.30.0",
    "chromadb>=1.5.0",
    "pdfplumber>=0.9.0",
    "openpyxl>=3.1.0",
    "selenium>=4.15.0",
    "playwright>=1.40.0",
    "opencv-python>=4.8.0",
    "mss>=9.0.0",
    "pytesseract>=0.3.10",
    "faster-whisper>=1.0.0",
    "discord.py>=2.0.0",
    "firecrawl-py>=4.0.0",
    "torch>=2.0.0",
    "transformers>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.6.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/recaiozil-wq/R-eYMeN-"
Source = "https://github.com/recaiozil-wq/R-eYMeN-"
"Hata Bildir" = "https://github.com/recaiozil-wq/R-eYMeN-/issues/new/choose"

[project.scripts]
reymen = "reymen_launcher:main"

[tool.setuptools]
packages = [
    "reymen",
    "reymen.ag",
    "reymen.arac",
    "reymen.cereyan",
    "reymen.cli",
    "reymen.cli.subcommands",
    "reymen.core",
    "reymen.desktop",
    "reymen.guvenlik",
    "reymen.hafiza",
    "reymen.mcp",
    "reymen.scripts",
    "reymen.sistem",
    "reymen.sistem.cli_commands",
    "reymen.sistem.cli_commands.handlers",
    "reymen.sistem.cli_commands.handlers.config",
    "reymen.sistem.cli_commands.handlers.edit",
    "reymen.sistem.cli_commands.handlers.session",
    "reymen.sistem.cli_commands.handlers.system",
    "reymen.sistem.cli_commands.handlers.tools",
    "reymen.sistem.plugins",
    "reymen.telegram_bot",
    "reymen.test",
    "reymen.test.test_cli",
    "reymen.test.test_sistem",
    "reymen.web_ui",
    "reymen.windows",
]
py-modules = ["reymen_launcher"]

[tool.setuptools.package-data]
reymen = ["**/*.yaml", "**/*.json", "**/*.md", "**/*.txt"]
