[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reymen-agent"
version = "2026.07.01"
description = "Autonomous AI agent with reasoning core, multi-platform gateways, and plugin system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[project.scripts]
reymen = "src.reymen.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reymen", "src/gateways", "src/core"]

[tool.hatch.build.targets.sdist]
include = ["/src"]
