[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reymen-agent"
version = "2026.07.04"
description = "Autonomous AI agent with reasoning core, multi-platform gateways, and plugin system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "asdafgf", email = "asdafgf@users.noreply.github.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
  "ai-agent",
  "multi-bot",
  "telegram",
  "mcp",
  "reasoning-core",
  "plugin-system",
]

[project.urls]
Homepage = "https://github.com/recaiozil-wq/reymen-agean"
Repository = "https://github.com/recaiozil-wq/reymen-agean.git"
Documentation = "https://github.com/recaiozil-wq/reymen-agean#readme"

[project.scripts]
reymen = "src.reymen.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reymen", "src/gateways", "src/core"]

[tool.hatch.build.targets.sdist]
include = ["/src"]
