[project]
name = "hersona"
version = "0.0.1"
description = "Generic attribute templates (personality / speech / archetype / visual / hobby) for composing AI-agent character personas"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "llm", "persona", "character", "ai-agent", "prompt",
    "roleplay", "anime", "system-prompt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[project.urls]
Homepage = "https://shiro-0x.github.io/hersona/"
Repository = "https://github.com/shiro-0x/hersona"
Changelog = "https://github.com/shiro-0x/hersona/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "jsonschema2md>=1.5",
]

[project.scripts]
hersona = "hersona.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# wheel には Python パッケージ本体に加え、属性テンプレートとスキーマを
# hersona/data/ 配下に同梱する (hersona.core.paths がリポジトリ直置きと両対応で解決)。
# scripts/ は開発用のためパッケージに含めない (sdist には git 経由で含まれる)。
[tool.hatch.build.targets.wheel]
packages = ["hersona"]

[tool.hatch.build.targets.wheel.force-include]
"attributes" = "hersona/data/attributes"
"schema" = "hersona/data/schema"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
